# strataregula-lsp

./: .coverage  .devex-baseline.yaml  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  test_patterns.yaml
.github/: CODEOWNERS  labeler.yml
.github/workflows/: cov-bump.yml  coverage-report.yml  flaky-rehab.yml  flaky-scan.yml
docs/: README_FOR_DEVELOPERS.md
docs/reports/: weekly.md
docs/run/: 2025-08-30T10-03JST-devcontainer-rollout.md  2025-08-30T10-14JST-devcontainer-env-check.md  2025-08-30T21-09JST-agents-wiring.md  2025-08-30T21-33JST-phase4-sustain-measure-kickoff.md  2025-08-30T21-46JST-weekly-health-bootstrap.md
strataregula_lsp/: __init__.py  server.py
strataregula_lsp/analyzer/: __init__.py  pattern_analyzer.py  pattern_tokenizer.py
strataregula_lsp/handlers/: __init__.py  completion.py  definition.py  diagnostics.py  formatting.py  hover.py  references.py  rename.py  symbols.py
strataregula_lsp/providers/: pattern_provider.py
strataregula_lsp/utils/: __init__.py
tests/: conftest.py  flaky_quarantine.yaml  test_00_imports.py  test_01_cli_help.py  test_02_pkg_metadata.py
tools/: bump_coverage_fail_under.py  rehab_flaky.py  seed_coverage_gate.py
