[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strataregula-lsp"
version = "0.1.0"
description = "Language Server Protocol implementation for StrataRegula YAML configuration pattern compiler"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "StrataRegula Team", email = "strataregula@example.com"}
]
keywords = [
    "lsp",
    "language-server",
    "yaml",
    "configuration",
    "strataregula",
    "pattern-matching"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)"
]

dependencies = [
    "pygls>=1.1.0",
    "lsprotocol>=2023.0.0",
    "pyyaml>=6.0",
    "strataregula>=0.2.0",
    "typing-extensions>=4.0.0; python_version<'3.10'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0"
]

[project.scripts]
strataregula-lsp = "strataregula_lsp.server:main"

[project.urls]
Homepage = "https://github.com/strataregula/strataregula-lsp"
Documentation = "https://github.com/strataregula/strataregula-lsp/docs"
Repository = "https://github.com/strataregula/strataregula-lsp"
Issues = "https://github.com/strataregula/strataregula-lsp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["strataregula_lsp*"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"